force-app/main/default/objects/Contact/fields/CID_of_Referrer__c.field-meta.xml
<CustomField>
    <fullName>CID_of_Referrer__c</fullName>
    <label>CID of Referrer</label>
    <length>50</length>
    <type>Text</type>
</CustomField>