force-app/main/default/objects/Contact/fields/Email_Conversion_Done__c.field-meta.xml
<CustomField>
    <fullName>Email_Conversion_Done__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Email Conversion Done?</label>
    <type>Checkbox</type>
</CustomField>