force-app/main/default/objects/Contact/fields/Is_Phone_Invalid__c.field-meta.xml
<CustomField>
    <fullName>Is_Phone_Invalid__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Phone Invalid</label>
    <type>Checkbox</type>
</CustomField>