force-app/main/default/objects/Contact/fields/Total_Email__c.field-meta.xml
<CustomField>
    <fullName>Total_Email__c</fullName>
    <label>Total Email</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>